{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 319,
  "lineage": "03d9b573-5e6d-4fde-acf2-a817b309c7f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ohio_ngateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa95e721407c419a",
            "arn": "arn:aws:ec2:us-east-2:767398128098:elastic-ip/eipalloc-0fa95e721407c419a",
            "association_id": "eipassoc-07b7755ba19165f97",
            "domain": "vpc",
            "id": "eipalloc-0fa95e721407c419a",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f80f03ba8105259a",
            "private_dns": "ip-10-0-1-117.us-east-2.compute.internal",
            "private_ip": "10.0.1.117",
            "public_dns": "ec2-18-190-84-52.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.84.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "paris_ngateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029aee068e7380cfd",
            "arn": "arn:aws:ec2:eu-west-3:767398128098:elastic-ip/eipalloc-029aee068e7380cfd",
            "association_id": "eipassoc-01a80cbdb5451f1ba",
            "domain": "vpc",
            "id": "eipalloc-029aee068e7380cfd",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-076f34f5127152dd6",
            "private_dns": "ip-11-0-1-239.eu-west-3.compute.internal",
            "private_ip": "11.0.1.239",
            "public_dns": "ec2-52-47-205-93.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.205.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "P_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8423e33dfb7aaea",
            "arn": "arn:aws:ec2:eu-west-3:767398128098:instance/i-06d4846e25c8904d9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d4846e25c8904d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paris-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a8cf29d93b70113",
            "private_dns": "ip-11-0-1-108.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.108",
            "public_ip": "13.36.177.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fa36e6f99ebc7848",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cbf00b3df246b5c",
            "tags": {
              "Name": "P_instance"
            },
            "tags_all": {
              "Name": "P_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9164f2567af3a23"
            ]
          },
          "dependencies": [
            "aws_security_group.paris_sg",
            "aws_subnet.public_subnet_paris_1",
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "o_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0100e595e1cc1ff7f",
            "arn": "arn:aws:ec2:us-east-2:767398128098:instance/i-0933bb47ec54bc7f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0933bb47ec54bc7f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048fe1f5d75a51d7f",
            "private_dns": "ip-10-0-1-82.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.82",
            "public_ip": "3.138.191.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03808e8971ff57dc7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05027193f761ce8c9",
            "tags": {
              "Name": "o_instance"
            },
            "tags_all": {
              "Name": "o_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0071d7c8a0f71ab25"
            ]
          },
          "dependencies": [
            "aws_security_group.ohio_sg",
            "aws_subnet.public_subnet_ohio_1",
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ohio_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:internet-gateway/igw-00d2b15a99dcc1769",
            "id": "igw-00d2b15a99dcc1769",
            "owner_id": "767398128098",
            "tags": {
              "Name": "ohio_igw"
            },
            "tags_all": {
              "Name": "ohio_igw"
            },
            "vpc_id": "vpc-0287496ef41ed4571"
          },
          "dependencies": [
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "paris_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:internet-gateway/igw-0bbec87392d8d3315",
            "id": "igw-0bbec87392d8d3315",
            "owner_id": "767398128098",
            "tags": {
              "Name": "paris_igw"
            },
            "tags_all": {
              "Name": "paris_igw"
            },
            "vpc_id": "vpc-014c073162cf9ec14"
          },
          "dependencies": [
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_o",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa95e721407c419a",
            "association_id": "eipassoc-07b7755ba19165f97",
            "connectivity_type": "public",
            "id": "nat-0f5e086f040db87b0",
            "network_interface_id": "eni-0f80f03ba8105259a",
            "private_ip": "10.0.1.117",
            "public_ip": "18.190.84.52",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05027193f761ce8c9",
            "tags": {
              "Name": "nat_o"
            },
            "tags_all": {
              "Name": "nat_o"
            }
          },
          "dependencies": [
            "aws_eip.ohio_ngateway",
            "aws_internet_gateway.ohio_igw",
            "aws_subnet.public_subnet_ohio_1",
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_p",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029aee068e7380cfd",
            "association_id": "eipassoc-01a80cbdb5451f1ba",
            "connectivity_type": "public",
            "id": "nat-0bd44934e53650b4b",
            "network_interface_id": "eni-076f34f5127152dd6",
            "private_ip": "11.0.1.239",
            "public_ip": "52.47.205.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01cbf00b3df246b5c",
            "tags": {
              "Name": "nat_p"
            },
            "tags_all": {
              "Name": "nat_p"
            }
          },
          "dependencies": [
            "aws_eip.paris_ngateway",
            "aws_internet_gateway.paris_igw",
            "aws_subnet.public_subnet_paris_1",
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-046ffd74d60df6982",
            "id": "rtb-046ffd74d60df6982",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f5e086f040db87b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287496ef41ed4571"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ohio_ngateway",
            "aws_internet_gateway.ohio_igw",
            "aws_nat_gateway.nat_o",
            "aws_subnet.public_subnet_ohio_1",
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:route-table/rtb-0d59eed08e950f7cf",
            "id": "rtb-0d59eed08e950f7cf",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bd44934e53650b4b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table_prs"
            },
            "tags_all": {
              "Name": "private_route_table_prs"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c073162cf9ec14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.paris_ngateway",
            "aws_internet_gateway.paris_igw",
            "aws_nat_gateway.nat_p",
            "aws_subnet.public_subnet_paris_1",
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-0498224655113bd28",
            "id": "rtb-0498224655113bd28",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d2b15a99dcc1769",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "11.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-08b24992859e6447f"
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287496ef41ed4571"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ohio_igw",
            "aws_vpc.ohio_vpc",
            "aws_vpc.paris_vpc",
            "aws_vpc_peering_connection.my-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:route-table/rtb-02f5c1352115dd23a",
            "id": "rtb-02f5c1352115dd23a",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bbec87392d8d3315",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-08b24992859e6447f"
              }
            ],
            "tags": {
              "Name": "public_route_table_prs"
            },
            "tags_all": {
              "Name": "public_route_table_prs"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c073162cf9ec14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.paris_igw",
            "aws_vpc.ohio_vpc",
            "aws_vpc.paris_vpc",
            "aws_vpc_peering_connection.my-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ass_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec22938094a8516d",
            "route_table_id": "rtb-046ffd74d60df6982",
            "subnet_id": "subnet-05069f0df9cb3f870"
          },
          "dependencies": [
            "aws_eip.ohio_ngateway",
            "aws_internet_gateway.ohio_igw",
            "aws_nat_gateway.nat_o",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_ohio_1",
            "aws_subnet.public_subnet_ohio_1",
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ass_1_prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf54bc4df3a42ee9",
            "route_table_id": "rtb-0d59eed08e950f7cf",
            "subnet_id": "subnet-0914396036fb06613"
          },
          "dependencies": [
            "aws_eip.paris_ngateway",
            "aws_internet_gateway.paris_igw",
            "aws_nat_gateway.nat_p",
            "aws_route_table.private_route_table_prs",
            "aws_subnet.private_subnet_paris_1",
            "aws_subnet.public_subnet_paris_1",
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ass_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02da361db33388cf5",
            "route_table_id": "rtb-046ffd74d60df6982",
            "subnet_id": "subnet-0d76974b6dd8c9788"
          },
          "dependencies": [
            "aws_eip.ohio_ngateway",
            "aws_internet_gateway.ohio_igw",
            "aws_nat_gateway.nat_o",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_ohio_2",
            "aws_subnet.public_subnet_ohio_1",
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ass_2_prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03852f5d8bf6149d9",
            "route_table_id": "rtb-0d59eed08e950f7cf",
            "subnet_id": "subnet-0b5d4dc0e68f426a3"
          },
          "dependencies": [
            "aws_eip.paris_ngateway",
            "aws_internet_gateway.paris_igw",
            "aws_nat_gateway.nat_p",
            "aws_route_table.private_route_table_prs",
            "aws_subnet.private_subnet_paris_2",
            "aws_subnet.public_subnet_paris_1",
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ass_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020f80b855bbd1b38",
            "route_table_id": "rtb-0498224655113bd28",
            "subnet_id": "subnet-05027193f761ce8c9"
          },
          "dependencies": [
            "aws_internet_gateway.ohio_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_ohio_1",
            "aws_vpc.ohio_vpc",
            "aws_vpc.paris_vpc",
            "aws_vpc_peering_connection.my-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ass_1_prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085fba9eb58bd4c7d",
            "route_table_id": "rtb-02f5c1352115dd23a",
            "subnet_id": "subnet-01cbf00b3df246b5c"
          },
          "dependencies": [
            "aws_internet_gateway.paris_igw",
            "aws_route_table.public_route_table_prs",
            "aws_subnet.public_subnet_paris_1",
            "aws_vpc.ohio_vpc",
            "aws_vpc.paris_vpc",
            "aws_vpc_peering_connection.my-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ass_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041831d1b6438cca1",
            "route_table_id": "rtb-0498224655113bd28",
            "subnet_id": "subnet-0e9bf8add1a94fcde"
          },
          "dependencies": [
            "aws_internet_gateway.ohio_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_ohio_2",
            "aws_vpc.ohio_vpc",
            "aws_vpc.paris_vpc",
            "aws_vpc_peering_connection.my-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ass_2_prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9008ebf4efbbb49",
            "route_table_id": "rtb-02f5c1352115dd23a",
            "subnet_id": "subnet-0c1d80c89d21dfb9f"
          },
          "dependencies": [
            "aws_internet_gateway.paris_igw",
            "aws_route_table.public_route_table_prs",
            "aws_subnet.public_subnet_paris_2",
            "aws_vpc.ohio_vpc",
            "aws_vpc.paris_vpc",
            "aws_vpc_peering_connection.my-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ohio_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:security-group/sg-0071d7c8a0f71ab25",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0071d7c8a0f71ab25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ohio_sg",
            "name_prefix": "",
            "owner_id": "767398128098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ohio_sg"
            },
            "tags_all": {
              "Name": "ohio_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287496ef41ed4571"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "paris_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:security-group/sg-0a9164f2567af3a23",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9164f2567af3a23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "paris_sg",
            "name_prefix": "",
            "owner_id": "767398128098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paris_sg"
            },
            "tags_all": {
              "Name": "paris_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c073162cf9ec14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_ohio_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-05069f0df9cb3f870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05069f0df9cb3f870",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_ohio_1"
            },
            "tags_all": {
              "Name": "private_subnet_ohio_1"
            },
            "vpc_id": "vpc-0287496ef41ed4571"
          },
          "dependencies": [
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_ohio_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-0d76974b6dd8c9788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d76974b6dd8c9788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_ohio_2"
            },
            "tags_all": {
              "Name": "private_subnet_ohio_2"
            },
            "vpc_id": "vpc-0287496ef41ed4571"
          },
          "dependencies": [
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_paris_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:subnet/subnet-0914396036fb06613",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0914396036fb06613",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_paris_1"
            },
            "tags_all": {
              "Name": "private_subnet_paris_1"
            },
            "vpc_id": "vpc-014c073162cf9ec14"
          },
          "dependencies": [
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_paris_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:subnet/subnet-0b5d4dc0e68f426a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5d4dc0e68f426a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_paris_2"
            },
            "tags_all": {
              "Name": "private_subnet_paris_2"
            },
            "vpc_id": "vpc-014c073162cf9ec14"
          },
          "dependencies": [
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_ohio_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-05027193f761ce8c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05027193f761ce8c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_ohio"
            },
            "tags_all": {
              "Name": "public_subnet_ohio"
            },
            "vpc_id": "vpc-0287496ef41ed4571"
          },
          "dependencies": [
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_ohio_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-0e9bf8add1a94fcde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9bf8add1a94fcde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_ohio_2"
            },
            "tags_all": {
              "Name": "public_subnet_ohio_2"
            },
            "vpc_id": "vpc-0287496ef41ed4571"
          },
          "dependencies": [
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_paris_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:subnet/subnet-01cbf00b3df246b5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cbf00b3df246b5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_paris"
            },
            "tags_all": {
              "Name": "public_subnet_paris"
            },
            "vpc_id": "vpc-014c073162cf9ec14"
          },
          "dependencies": [
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_paris_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:subnet/subnet-0c1d80c89d21dfb9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1d80c89d21dfb9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_paris_2"
            },
            "tags_all": {
              "Name": "public_subnet_paris_2"
            },
            "vpc_id": "vpc-014c073162cf9ec14"
          },
          "dependencies": [
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ohio_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:vpc/vpc-0287496ef41ed4571",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-029c0f6f7b8ac004d",
            "default_route_table_id": "rtb-0dc97f016638e3915",
            "default_security_group_id": "sg-070b1da3bdb6c53f1",
            "dhcp_options_id": "dopt-0a244f3e9f28a8761",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0287496ef41ed4571",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc97f016638e3915",
            "owner_id": "767398128098",
            "tags": {
              "Name": "ohio_vpc"
            },
            "tags_all": {
              "Name": "ohio_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "paris_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:vpc/vpc-014c073162cf9ec14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0ecdd18cae53b10ee",
            "default_route_table_id": "rtb-0f05b5e3d5b3bfff6",
            "default_security_group_id": "sg-0b480f9b20ffa5a54",
            "dhcp_options_id": "dopt-043616d6c586b28b7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014c073162cf9ec14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f05b5e3d5b3bfff6",
            "owner_id": "767398128098",
            "tags": {
              "Name": "paris_vpc"
            },
            "tags_all": {
              "Name": "paris_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "my-peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-08b24992859e6447f",
            "peer_owner_id": "767398128098",
            "peer_region": "eu-west-3",
            "peer_vpc_id": "vpc-014c073162cf9ec14",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Side": "Requestor"
            },
            "tags_all": {
              "Side": "Requestor"
            },
            "vpc_id": "vpc-0287496ef41ed4571"
          },
          "dependencies": [
            "aws_vpc.ohio_vpc",
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-08b24992859e6447f",
            "peer_owner_id": "767398128098",
            "peer_region": "eu-west-3",
            "peer_vpc_id": "vpc-014c073162cf9ec14",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "tags_all": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-0287496ef41ed4571",
            "vpc_peering_connection_id": "pcx-08b24992859e6447f"
          },
          "dependencies": [
            "aws_vpc.ohio_vpc",
            "aws_vpc.paris_vpc",
            "aws_vpc_peering_connection.my-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:security-group-rule/sgr-0f4d8551d1c36b724",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f4d8551d1c36b724",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0071d7c8a0f71ab25",
            "security_group_rule_id": "sgr-0f4d8551d1c36b724",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ohio_sg",
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:security-group-rule/sgr-05a00a10f588c0252",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05a00a10f588c0252",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a9164f2567af3a23",
            "security_group_rule_id": "sgr-05a00a10f588c0252",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.paris_sg",
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:security-group-rule/sgr-003efece531e57980",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-003efece531e57980",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0071d7c8a0f71ab25",
            "security_group_rule_id": "sgr-003efece531e57980",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ohio_sg",
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:security-group-rule/sgr-0adcef4a23de6f749",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0adcef4a23de6f749",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a9164f2567af3a23",
            "security_group_rule_id": "sgr-0adcef4a23de6f749",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.paris_sg",
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:security-group-rule/sgr-08111423df3789e8a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-08111423df3789e8a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0071d7c8a0f71ab25",
            "security_group_rule_id": "sgr-08111423df3789e8a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ohio_sg",
            "aws_vpc.ohio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].paris",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767398128098:security-group-rule/sgr-0735818d22ec292ba",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0735818d22ec292ba",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a9164f2567af3a23",
            "security_group_rule_id": "sgr-0735818d22ec292ba",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.paris_sg",
            "aws_vpc.paris_vpc"
          ]
        }
      ]
    }
  ]
}